--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,22 +52,31 @@
           <div class="flex h-16 justify-between">
             <div class="flex">
               <div class="flex flex-shrink-0 items-center">
-                <img class="h-8 w-auto" src="/icon.svg" alt="Jira Clone">
+                <%= link_to root_path do %>
+                  <img class="h-8 w-auto" src="/icon.svg" alt="Jira Clone">
+                <% end %>
               </div>
               <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
-                <%= link_to "Projects", projects_path, class: "inline-flex items-center border-b-2 border-indigo-500 px-1 pt-1 text-sm font-medium text-gray-900" %>
-                <%= link_to "Tickets", tickets_path, class: "inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700" %>
+                <%= link_to "Projects", projects_path, 
+                    class: "inline-flex items-center border-b-2 #{current_page?(projects_path) ? 'border-indigo-500 text-gray-900' : 'border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700'} px-1 pt-1 text-sm font-medium" %>
+                <%= link_to "All Tickets", tickets_path, 
+                    class: "inline-flex items-center border-b-2 #{current_page?(tickets_path) ? 'border-indigo-500 text-gray-900' : 'border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700'} px-1 pt-1 text-sm font-medium" %>
               </div>
             </div>
             <div class="hidden sm:ml-6 sm:flex sm:items-center">
-              <div class="relative ml-3">
-                <div>
-                  <button type="button" class="flex rounded-full bg-white text-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" id="user-menu-button">
-                    <span class="sr-only">Open user menu</span>
-                    <img class="h-8 w-8 rounded-full" src="https://avatars.dicebear.com/api/initials/<%= current_user&.email || 'guest' %>.svg" alt="">
-                  </button>
+              <% if user_signed_in? %>
+                <div class="relative ml-3">
+                  <div>
+                    <button type="button" class="flex rounded-full bg-white text-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" id="user-menu-button">
+                      <span class="sr-only">Open user menu</span>
+                      <img class="h-8 w-8 rounded-full" src="https://avatars.dicebear.com/api/initials/<%= current_user.email %>.svg" alt="">
+                    </button>
+                  </div>
                 </div>
-              </div>
+                <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "ml-4 text-sm text-gray-500 hover:text-gray-700" %>
+              <% else %>
+                <%= link_to "Sign in", new_user_session_path, class: "text-sm text-gray-500 hover:text-gray-700" %>
+              <% end %>
             </div>
           </div>
         </div>
@@ -76,6 +85,36 @@
       <div class="py-10">
         <main>
           <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
+            <% if notice %>
+              <div class="mb-4 rounded-md bg-green-50 p-4">
+                <div class="flex">
+                  <div class="flex-shrink-0">
+                    <svg class="h-5 w-5 text-green-400" viewBox="0 0 20 20" fill="currentColor">
+                      <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
+                    </svg>
+                  </div>
+                  <div class="ml-3">
+                    <p class="text-sm font-medium text-green-800"><%= notice %></p>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+
+            <% if alert %>
+              <div class="mb-4 rounded-md bg-red-50 p-4">
+                <div class="flex">
+                  <div class="flex-shrink-0">
+                    <svg class="h-5 w-5 text-red-400" viewBox="0 0 20 20" fill="currentColor">
+                      <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"/>
+                    </svg>
+                  </div>
+                  <div class="ml-3">
+                    <p class="text-sm font-medium text-red-800"><%= alert %></p>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+
             <%= yield %>
           </div>
         </main>
